syntax = "proto3";

option go_package = "scmc/rpc/pb/image";

package image;

import "common.proto";
import "image_types.proto";

service Image {
  rpc List(ListRequest) returns (ListReply) {}
  rpc ListDB(ListDBRequest) returns (ListDBReply) {}
  rpc Upload(stream UploadRequest) returns (UploadReply) {}
  rpc Update(stream UpdateRequest) returns (UpdateReply) {}
  rpc Download(DownloadRequest) returns (stream DownloadReply) {}
  rpc Check(CheckRequest) returns (CheckReply) {}
  rpc Remove(RemoveRequest) returns (RemoveReply) {}
}

message ListRequest {
    common.RequestHeader header = 1;
    int64 node_id = 2;
}

message ListReply {
    common.ReplyHeader header = 1;
    repeated ImageInfo images = 2;
}

message ListDBRequest {
    common.RequestHeader header = 1;
}

message ListDBReply {
    common.ReplyHeader header = 1;
    repeated ImageDBInfo images = 2;
}

message UploadRequest {
    common.RequestHeader header = 1;
    UploadInfo info = 2;
    bytes chunk_data = 3;
}

message UploadReply {
    common.ReplyHeader header = 1;
    int64 image_id = 2; //in db
}

message UpdateRequest {
    common.RequestHeader header = 1;
    int64 image_id = 2;
    UploadInfo info = 3;
    bytes chunk_data = 4;
}

message UpdateReply {
    common.ReplyHeader header = 1;
}

message DownloadRequest {
    common.RequestHeader header = 1;
    int64 image_id = 2;
}

message DownloadReply {
    common.ReplyHeader header = 1;
    UploadInfo info = 2;
    bytes chunk_data = 3;
}

message CheckRequest {
    common.RequestHeader header = 1;
    int64 image_id = 2;
    bool check_status = 3;
    string reject_reason = 4;
}

message CheckReply {
    common.ReplyHeader header = 1;
}

message RemoveRequest {
    common.RequestHeader header = 1;
    repeated int64 image_ids = 2;
}

message RemoveReply {
    common.ReplyHeader header = 1;
    repeated string ok_ids = 2;
}
